# handwriting

./: .gitignore  Cargo.toml
src/: main.rs
src/injection/: mod.rs  text.rs
src/ink/: mod.rs  recognizer.rs
src/overlay/: mod.rs  session.rs  window.rs
src/shell_handwriting/: ffi.rs  interfaces.rs  manager.rs  mod.rs  pointer_host.rs  state_probe.rs
src/ui/: draw.rs  mod.rs
