[package]
name = "handwriting"
version = "0.1.0"
edition = "2024"

description = "Windows 11 fullscreen handwriting with ITfHandwriting and Ink recognition"

[dependencies]
anyhow = "1"
windows-collections = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
windows = { version = "0.61", features = ["Foundation", "Foundation_Collections", "UI_Input_Inking", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_System_DataExchange", "Win32_System_LibraryLoader", "Win32_System_Memory", "Win32_System_Ole", "Win32_System_Threading", "Win32_System_Variant", "Win32_System_WinRT", "Win32_UI_Accessibility", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Input_Pointer", "Win32_UI_TextServices", "Win32_UI_WindowsAndMessaging"] }
windows-core = "0.61"
windows-future = "0.2"